# cdd

./: README.md
benchmarks/compilerbug/clang-22704/: small.c
benchmarks/compilerbug/clang-23309/: r.sh
benchmarks/compilerbug/clang-25900/: r.sh
benchmarks/compilerbug/clang-27137/: r.sh
benchmarks/compilerbug/clang-31259/: r.sh
benchmarks/compilerbug/gcc-59903/: r.sh
benchmarks/compilerbugs/: analyze_log.py  generate_HDDReport.py  runHDD.sh
benchmarks/debloating/: Makefile  README.txt  generate_ChiselReport.py  runChisel.sh  test-base.sh
benchmarks/utilitybugs/: batch.sh
benchmarks/utilitybugs-line/: add_lines.py  count.py  delete_random.py
benchmarks/utilitybugs-line/spell-1.1/src/: Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs  spell.c
scripts/: build_chisel.sh  build_hdd.sh  cleanup_hdd.py  cleanup_line_reduction.py  cleanup_program_reduction.py  cleanup_string_reduction.py  cleanup_xml_reduction.py  compute_program_reduction_deletion_trials.py  compute_software_debloating_deletion_trials.py  compute_xml_deletion_trials.py  insert_counter.sh  run_chisel.sh  run_hdd.sh  run_line_reduction.sh  run_program_reduction.sh  run_software_debloating.sh  run_string_reduction.sh  run_xml_reduction.sh  simulation.py  summarize_chisel.py  summarize_hdd.py  summarize_line_reduction.py  summarize_program_reduction.py  summarize_program_reduction_deletion_trials.py  summarize_software_debloating.py  summarize_software_debloating_deletion_trials.py  summarize_string_reduction.py  summarize_xml_deletion_trials.py  summarize_xml_reduction.py
src/chisel/: CMakeLists.txt
src/picire/: setup.py
src/picire-21.8/: setup.py
src/picireny/: setup.cfg  setup.py
src/picireny-21.8/: setup.cfg  setup.py
(+273 files in other folders)
