dnl Configure template for GNU Spell.
dnl Process this file with autoconf to produce a configure script.

# This file is part of GNU Spell.
# Copyright (C) 1996,2010 Free Software Foundation, Inc.

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT(spell.c)
AC_CONFIG_HEADER(config.h)

VERSION=`sed -ne 's/^@set VERSION \(.*\)$/\1/p' version.texi`
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(VERSION)

# checks for programs

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

# checks for libraries

AC_CHECK_LIB(malloc, malloc)
dnl AC_CHECK_LIB(ucb, bzero)

# checks for header files

dnl AC_USG
AC_HAVE_HEADERS(string.h)

# checks for typedefs

AC_TYPE_PID_T

# checks for structures

# checks for compiler characteristics
AC_C_CONST

# checks for library functions
AC_CHECK_FUNCS(strerror)
AC_CHECK_FUNCS(getopt_long)
AC_CHECK_FUNCS(getline)

# checks for system services

AC_OUTPUT(Makefile)

dnl Local Variables:
dnl comment-start: "dnl "
dnl comment-end: ""
dnl comment-start-skip: "\\bdnl\\b\\s *"
dnl compile-command: "autoconf"
dnl End:
